# rotations

./: .gitignore  Cargo.toml  LICENSE  mypy.ini  pytest.ini  readme.md  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: test.yml
src/: lib.rs  main.py  unit_quaternion.rs
src/foo/: __init__.py  bar.py
src/rotations/: __init__.py  common.py  euler_angles.py  rotation_matrix.py  so3.py  unit_quaternion.py
tests/: test_eul.py  test_quats.py  test_rot.py  test_rustcompiled.py
