[metadata]
name = mytemplaterepo
version = 1.0.0
license_file = LICENSE

[options]
packages =
    foo
python_requires =
    >=3.6
install_requires =
    numpy > 1.2
package_dir =
    =src
zip_safe =
    no

[options.extras_require]
testing =
    pytest>=6.2
    pytest-cov>=2.1
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
foo = py.typed

[flake8]
max-line-length =
    160
exclude =
    .git,
    __pycache__,
per-file-ignores =
    # Ignore the `imported but unused` warning
    __init__.py: F401