[metadata]
name = rotations
version = 1.0.0
license_file = LICENSE

[options]
packages =
    rotations
python_requires =
    >=3.8
install_requires =
    numpy > 1.24
package_dir =
    =src
zip_safe =
    no

[options.extras_require]
testing =
    pytest>=7.2
    pytest-cov>=4.0
    tox>=3.24

[options.package_data]
rotations = py.typed
